nexus-rt/tests/ui/wrong_param_order.stderr
error[E0277]: this type cannot be stored as a resource in the World
 --> tests/ui/wrong_param_order.rs:8:35
  |
8 | fn bad_order(event: u32, _config: Res<Config>) {
  |                                   ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Resource` is not implemented for `Config`
 --> tests/ui/wrong_param_order.rs:6:1
  |
6 | struct Config;
  | ^^^^^^^^^^^^^
  = note: add `#[derive(Resource)]` to your type, or use `new_resource!` for a newtype wrapper
help: the following other types implement trait `Resource`
 --> src/scheduler.rs
  |
  | impl crate::world::Resource for SchedulerTick {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SchedulerTick`
  |
 ::: src/clock.rs
  |
  | impl crate::world::Resource for Clock {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Clock`
note: required by a bound in `Res`
 --> src/resource.rs
  |
  | pub struct Res<'w, T: Resource + 'static> {
  |                       ^^^^^^^^ required by this bound in `Res`

error[E0277]: this type cannot be stored as a resource in the World
  --> tests/ui/wrong_param_order.rs:19:17
   |
19 |     wb.register(Config);
   |        -------- ^^^^^^ unsatisfied trait bound
   |        |
   |        required by a bound introduced by this call
   |
help: the trait `Resource` is not implemented for `Config`
  --> tests/ui/wrong_param_order.rs:6:1
   |
 6 | struct Config;
   | ^^^^^^^^^^^^^
   = note: add `#[derive(Resource)]` to your type, or use `new_resource!` for a newtype wrapper
help: the following other types implement trait `Resource`
  --> src/scheduler.rs
   |
   | impl crate::world::Resource for SchedulerTick {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SchedulerTick`
   |
  ::: src/clock.rs
   |
   | impl crate::world::Resource for Clock {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Clock`
note: required by a bound in `WorldBuilder::register`
  --> src/world.rs
   |
   |     pub fn register<T: Resource>(&mut self, value: T) -> ResourceId {
   |                        ^^^^^^^^ required by this bound in `WorldBuilder::register`

error[E0277]: this function cannot be converted into a handler
  --> tests/ui/wrong_param_order.rs:23:32
   |
23 |     register_handler::<u32, _>(bad_order, &reg);
   |     -------------------------- ^^^^^^^^^ the trait `IntoHandler<u32, _>` is not implemented for fn item `for<'a> fn(u32, Res<'a, Config>) {bad_order}`
   |     |
   |     required by a bound introduced by this call
   |
   = note: handler signature: `fn(Res<A>, ResMut<B>, ..., Event)` — resources first, event last
   = note: closures with resource parameters (Res<T>, ResMut<T>) are not supported — use a named `fn`
   = note: arity-0 closures (`fn(Event)` with no resources) ARE supported
note: required by a bound in `register_handler`
  --> tests/ui/wrong_param_order.rs:13:35
   |
13 | fn register_handler<E, P>(f: impl IntoHandler<E, P>, registry: &nexus_rt::Registry) {
   |                                   ^^^^^^^^^^^^^^^^^ required by this bound in `register_handler`
